<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team 13 Checker</string>
    <string name="menu_settings">Settings</string>
    <string name="button_picture">Picture</string>
    <string name="button_color">Color</string>
    <string name="check_feather">Feather</string>
    <string name="title_activity_color_select">Select a Color</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="about_name">Mad Hatter App\n by CSE 476</string>
    <string name="about_instructions">Open a picture from your gallery or the Internet using the Picture button. Then drag the hat with one or two fingers to put a hat on it.</string>
    <string name="about_dlg_title">About Mad Hatter</string>
    <string name="by">CSE 476</string>
    <string name="url_prompt">URL:</string>
    <string name="gallery">Gallery</string>
    <string name="url_dlg_heading">Select Picture</string>
    <string name="izzo_url">http://www.cse.msu.edu/~cbowen/izzo.jpg</string>
    <string name="menu_save">Save to cloud&#8230;</string>
    <string name="menu_load">Load from cloud&#8230;</string>
    <string name="menu_delete">Delete from cloud&#8230;</string>
    <string name="load_fm_title">Load from cloud</string>
    <string name="dummy">Dummy</string>
    <string name="catalog_fail">Failed to load catalog of Hattings</string>
    <string name="loading">Loading</string>
    <string name="loading_fail">Failed to load Hatting</string>
    <string name="name_string">Name:</string>
    <string name="save_fail">Failed to save the hatting to the server</string>
    <string name="delete_fm_title">Delete from cloud</string>
    <string name="delete_sure">Are you sure you want to delete</string>
    <string name="delete_fail">Failed to delete hatting</string>
    <string name="deleting">Deleting</string>
    <string name="username">Username</string>
    <string name="Login">Log In</string>
    <string name="SignUp">Sign Up</string>
    <string name="LoginPass">You are Logged In</string>
    <string name="passwordmatch">Passwords Don\'t match Try Again</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="password">Password</string>
    <string name="account_created">Account Succesfully created</string>
    <string name="account_not_created">Account not Created</string>
    <string name="LoggingIn">Logging In</string>
    <string name="Newpass">New Password</string>
    <string name="ConfirmPasas">Confirm Password</string>
    <string name="Resign">Resign</string>
    <string name="ButtonPlayer1">Next Turn</string>
    <string name="Waiting">Waiting For Players</string>

    <string name="hurrah">OOPsssss</string>
    <string name="completed_puzzle">Invalid move kiddo</string>
    <string name="Dissconected">Connection Error</string>
    <string name="oppDisconnected">Opponent disconnected. Click Resign to Quit</string>
    <string name="ConnectError">Please Check your internet connection</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Playbutton">PLAY ONLINE!</string>
    <string name="playAgain">Play Again!!</string>
</resources>
